tests/ui/type_invalid_generic_struct_literal_root.ql
fn build[T]() -> Int {
    let value = T { field: 1 };
    return 0
}
